--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
     compile 'com.jakewharton.timber:timber:4.1.2'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
 }
