--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.1.2'
 
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 }
